@@ -4,6 +4,7 @@
 #ifndef __cplusplus
 #	include <limits.h>
 #	include <stdarg.h>
+#	include <stdbool.h>
 #	include <stdio.h>
 #else
 #	include <climits>
@@ -56,6 +57,7 @@ extern const char *HX_dlerror(void);
 extern int HX_ffs(unsigned long);
 extern int HX_fls(unsigned long);
 extern void HX_hexdump(FILE *, const void *, unsigned int);
+extern bool HX_timespec_isneg(const struct timespec *);
 extern struct timespec *HX_timespec_add(struct timespec *,
 	const struct timespec *, const struct timespec *);
 extern struct timespec *HX_timespec_sub(struct timespec *,
