@@ -145,6 +145,7 @@ stub1(HX_fls, (unsigned long a));
 stub3(HX_hexdump, (FILE *a, const void *b, unsigned int c));
 stub3(HX_timespec_add, (struct timespec *a, const struct timespec *b,
 	const struct timespec *c));
+stub1(HX_timespec_isneg, (const struct timespec *a));
 stub3(HX_timespec_sub, (struct timespec *a, const struct timespec *b,
 	const struct timespec *c));
 stub3(HX_diff_timespec, (struct timespec *a, const struct timespec *b,
