@@ -8,6 +8,7 @@ Enhancements:
   (parsing terminates at first non-option encountered)
 - time: add HX_TIMESPEC_{EXP,FMT}
 - time: add HX_TIMEVAL_{EXP,FMT}
+- time: add the HX_timespec_isneg function
 Changes:
 - io: remove HX_REALPATH_SYMLINK
 - time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
